[project]
name = "todooey"
version = "0.1.0"
description = "Simple todo app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.16.1",
    "nicegui>=2.21.0",
    "pytest>=8.4.1",
    "pywebview>=5.4",
    "ruff>=0.12.2",
    "sqlalchemy>=2.0.41",
]

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["ALL"]